add files to package

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build": "webpack -p",
     "prepare": "npm run build"
   },
+  "files": [
+    "dist/"
+  ],
   "authors": [
     "Jack Hanford"
   ],
